admin/style.css
:root {
    --lwel-pro-bg: yellow;
    --lwel-pro-font: #000;
    --lwel-hint-bg: #c45602;
    --lwel-hint-font: #fff;
    --lwel-pro-hint-bg: #fca15b;
    --lwel-pro-hint-font: #000;
}

.settings_page_easy_language_settings .highlight {
    background-color: var(--lwel-hint-bg);
    color: var(--lwel-hint-font);
    padding: 12px;
}

.settings_page_easy_language_settings .highlight a {
    color: var(--lwel-hint-font);
}

.settings_page_easy_language_settings .highlight a:after {
    content: "\f504";
    display: inline-block;
    font-family: "dashicons", sans-serif;
    margin-left: 4px;
    vertical-align: middle;
}

#easy-language label {
	display: block;
	margin-bottom: 1em;
}

#easy-language table {
    border-collapse: collapse;
    margin-bottom: 1em;
}

#easy-language table th {
    padding-right: 8px;
    text-align: left;
}

#easy-language table a {
    text-decoration: none;
}

td.easy-language .easy-language-trash { color: #b32d2e; }

td[class^="easy-language"] a, td[class^="easy-language"] span, .text-translations-table .options span, .text-translations-table .options a {
    display: inline-block;
    margin-right: 0.8em;
}

.text-translations-table .options { white-space: nowrap }

.etfw-transient h3 img { width: 32px; }

.etfw-transient ul {
	list-style: disc;
	margin-left: 14px;
	margin-top: 0;
}

.easy-language-translate-object span {
    display: inline-block;
    margin-left: 4px;
    vertical-align: middle;
}

body .button.easy-language-settings-button {
    display: inline-block;
    margin-right: 8px;
	margin-top: 8px;
}

body .text-translations-table #options { width: 42px; }

body .text-translations-table #used_api { width: 64px; }

body .text-translations-table #user { width: 100px }

body .text-translations-table #source_language, body .text-translations-table #target_language { width: 110px; }

.postbox-container #easy-language .alert {
    background-color: #cc1818;
    color: #fff;
    padding: 2px 8px;
}

.easy_language_api {
	display: block;
    margin: 24px 0 0;
	> th { display: none }
	th, td {
		line-height: 1;
		padding: 0
	}
	table {
		border-collapse: collapse;
		margin-top: 4px;
	}
	.dashicons {
		line-height: 1.3;
	}
	.button {
		margin-right: 1em;
	}
}

.easy_language_api td > div {
	margin-bottom: 12px;
}

@media only screen and (min-width: 600px) {
	.easy_language_api td {
		display: grid;
		grid-template-columns: repeat(3, 1fr);
		grid-gap: 12px;
		grid-auto-rows: 1fr;
		margin-right: 12px;
	}
	.easy_language_api td > div { margin: 12px 0; }
}

.easy_language_api h2 {
    margin-top: 0;
}

.easy_language_api img {
    float: right;
    height: 32px;
}

.easy_language_api input[type='radio'] { display: none }

.easy_language_api input[type='radio'] + label {
    background-color: #dcdcde;
    border: 1px solid #c3c4c7;
    border-radius: 8px;
    display: block;
	height: 100%;
    padding: 18px 12px 8px;
    position: relative;
    z-index: 1;
}

.easy_language_api input[type='radio'] + label > p:last-child { margin-bottom: 0 }

.easy_language_api input[type='radio'] + label:before {
    background-color: var( --lwel-hint-bg);
    border-radius: 8px;
    color: var(--lwel-hint-font);
    content: attr(data-active-title);
    display: none;
    padding: 4px 12px;
    position: absolute;
    top: 0;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 10;
}

.easy_language_api input[type='radio'] + label:hover {
	background-color: rgba(0,0,0,0.1);
}

.easy_language_api input[type='radio']:checked + label, .easy_language_api input[type='radio']:checked + label:hover {
    background-color: #fff;
}

.easy-language-transient .notice-dismiss:before {
	display: inline-block;
	float: right;
}

.easy-language-transient .notice-dismiss:hover {
	color: #d63638;
}

.easy-language-pointer p img {
	display: inline-block;
	margin-right: 8px;
	width: 16px;
}

.easylanguage-simplification-dialog-no-close { z-index: 2000 !important }

#easylanguage-simplification-dialog-step-description { line-height: 1.4; }

#easylanguage-simplification-dialog-step-description li {
	font-size: 13px;
	list-style: disclosure-closed;
	margin-left: 14px;
}

.easy-language-input-text, .form-table td p.easy-language-input-text { margin-bottom: 12px }

.easy-language-input-text label {
	display: block;
	font-weight: bold;
	margin-bottom: 4px;
}

.easy-language-input-text input[type="text"] {
	width: 80%;
}

.settings_page_easy_language_settings input[type="number"] {
	width: 80px;
}

.settings_page_easy_language_settings .easy-language-checkbox img {
	width: 18px !important;
	height: auto !important
}

.settings_page_easy_language_settings #options { width: 42px; }

.easy-language-icons .tablenav { display: none }

.easy-language-transient h3 {
	margin: 15px 0;
}

@media only screen and (max-width: 990px) {
	.easy_language_api { display: block }
}

a.easy-dialog-for-wordpress, span.easy-dialog-for-wordpress { cursor: pointer }

body.easy-dialog-for-wordpress.wp-core-ui .components-modal__frame.easy-dialog:after {
	background-image: url(/wp-content/plugins/easy-language/gfx/easy-language-icon.png);
	width: 60px;
	height: 60px;
	float: right;
	content: "";
	background-size: cover;
	position: absolute;
	right: 12px;
	top: 12px;
	z-index: 100;
}

body.easy-dialog-for-wordpress.wp-core-ui .hide-header .easy-dialog-for-wordpress-text {
	padding-right: 64px;
}

body.easy-dialog-for-wordpress.wp-core-ui .easy-dialog-for-wordpress-text ul {
	list-style: disc;
	margin-left: 14px;
}

body.easy-dialog-for-wordpress.wp-core-ui .components-modal__header .components-modal__header-heading {
	padding-right: 64px;
}

body.easy-dialog-for-wordpress.wp-core-ui .easy-dialog .edfw-progressbar:after {
	background-image: url(/wp-content/plugins/easy-language/gfx/loading.svg);
	content: "";
	display: block;
	height: 40px;
	width: 60px;
	margin: 0 auto;
	background-repeat: no-repeat;
}

.text-translations-table #used_in, .settings_page_easy_language_settings #used_in {
	width: 120px;
}

.easy-language-automatic-simplification-prevented {
	cursor: pointer;
	position: relative;
	z-index: 1
}

.easy-language-automatic-simplification-prevented:after {
	border-bottom: 2px solid red;
	content: "";
	position: absolute;
	top: 9px;
	right: -6px;
	left: 0;
	bottom: 0;
	z-index: 2;
	transform: rotate(145deg);
}

#wp-admin-bar-easy-language-simplification-process progress {
	height: 12px;
	width: 80px;
}

#wp-admin-bar-easy-language-simplification-process progress::-moz-progress-bar { background-color: var(--wp-admin-theme-color-darker-20); }
#wp-admin-bar-easy-language-simplification-process progress::-webkit-progress-value { background-color: var(--wp-admin-theme-color-darker-20); }

body.settings_page_easy_language_settings h1 { display: inline-block }

body .review-hint-button:after {
	color: #d4af37;
	content: "\f155 \f155 \f155 \f155 \f155";
	display: inline-block;
	font-family: "dashicons", sans-serif;
	margin-left: 8px;
}

.easy-language-help-tab {
	background-color: var(--lwel-hint-bg);
	color: var(--lwel-hint-font);
	float: right;
	font-weight: bold;
}

#easy-setup-for-wordpress .components-panel__body p {
	color: #000;
	font-size: 1em
}

body.settings_page_easy_language_settings .state .dashicons-yes { color: green }
body.settings_page_easy_language_settings .state .dashicons-no { color: red }

body.admin_page_easyLanguageSetup #easy-setup-for-wordpress {
	min-width: 760px;
	width: 50%;
}

table.easy-language-target-language {
	width: 100%;
}

table.easy-language-target-language th, table.easy-language-target-language td {
	padding: 0 0 1em;
	vertical-align: middle;
}

table th.separator {
	width: 124px;
}

table th.new-lines {
	width: 92px;
}

body.settings_page_easy_language_settings #state { width: 48px }
body.settings_page_easy_language_settings #date { width: 124px }
body.settings_page_easy_language_settings #api { width: 80px }
body.settings_page_easy_language_settings #response { min-width: 200px;width: auto }

#easy-language-active-api {
	background-color: var(--lwel-hint-bg);
	border-radius: 12px;
	color: #fff;
	padding: 8px 12px;
	position: absolute;
	top: -8px;
	left: 50%;
	transform: translate(-50%, -50%);
	z-index: 10;
}

.easy_language_summ_ai_api_key td, .easy_language_capito_api_key td, .easy_language_chatgpt_api_key td {
	background-color: var(--lwel-hint-bg);
	color: #fff;
	a {
		color: #fff;
	}
}

.easy_language_summ_ai_target_languages td {
	vertical-align: top;
}

.easy_language_chatgpt_target_languages_prompts table {
	width: 100%;
}

